--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/cation_create_order"
+        android:id="@+id/action_create_order"
         android:title="@string/create_order_title"
         android:icon="@drawable/ic_add_white_24dp"
         android:orderInCategory="1"
@@ -15,6 +15,5 @@
         android:orderInCategory="2"
         app:showAsAction="ifRoom"
         app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
-
 
 </menu>
